--- a/plan.html
+++ b/plan.html
@@ -123,7 +123,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio1">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Capsule</h3>
-                                <p class="coffee_plan--card_desc">Compatible with Nespresso systems and similar brewers</p>
+                                <p class="coffee_plan--card_desc">Compatible with Nespresso systems and similar brewers
+                                </p>
                             </div>
                         </label>
 
@@ -131,7 +132,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio1">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Filter</h3>
-                                <p class="coffee_plan--card_desc">For pour over or drip methods like Aeropress, Chemex, and V60</p>
+                                <p class="coffee_plan--card_desc">For pour over or drip methods like Aeropress, Chemex,
+                                    and V60</p>
                             </div>
                         </label>
 
@@ -139,7 +141,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio1">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Espresso</h3>
-                                <p class="coffee_plan--card_desc">Dense and finely ground beans for an intense, flavorful experience</p>
+                                <p class="coffee_plan--card_desc">Dense and finely ground beans for an intense,
+                                    flavorful experience</p>
                             </div>
                         </label>
                     </div>
@@ -161,7 +164,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio2">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Single Origin</h3>
-                                <p class="coffee_plan--card_desc">Distinct, high quality coffee from a specific family-owned farm</p>
+                                <p class="coffee_plan--card_desc">Distinct, high quality coffee from a specific
+                                    family-owned farm</p>
                             </div>
                         </label>
 
@@ -169,7 +173,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio2">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Decaf</h3>
-                                <p class="coffee_plan--card_desc">Just like regular coffee, except the caffeine has been removed</p>
+                                <p class="coffee_plan--card_desc">Just like regular coffee, except the caffeine has been
+                                    removed</p>
                             </div>
                         </label>
 
@@ -177,7 +182,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio2">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Blended</h3>
-                                <p class="coffee_plan--card_desc">Combination of two or three dark roasted beans of organic coffees</p>
+                                <p class="coffee_plan--card_desc">Combination of two or three dark roasted beans of
+                                    organic coffees</p>
                             </div>
                         </label>
                     </div>
@@ -199,7 +205,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio3">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">250g</h3>
-                                <p class="coffee_plan--card_desc">Perfect for the solo drinker. Yields about 12 delicious
+                                <p class="coffee_plan--card_desc">Perfect for the solo drinker. Yields about 12
+                                    delicious
                                     cups.</p>
                             </div>
                         </label>
@@ -208,7 +215,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio3">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">500g</h3>
-                                <p class="coffee_plan--card_desc">Perfect option for a couple. Yields about 40 delectable
+                                <p class="coffee_plan--card_desc">Perfect option for a couple. Yields about 40
+                                    delectable
                                     cups.</p>
                             </div>
                         </label>
@@ -217,7 +225,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio3">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">1000g</h3>
-                                <p class="coffee_plan--card_desc">Perfect for offices and events. Yields about 90 delightful
+                                <p class="coffee_plan--card_desc">Perfect for offices and events. Yields about 90
+                                    delightful
                                     cups.</p>
                             </div>
                         </label>
@@ -240,7 +249,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio4">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Wholebean</h3>
-                                <p class="coffee_plan--card_desc">Best choice if you cherish the full sensory experience</p>
+                                <p class="coffee_plan--card_desc">Best choice if you cherish the full sensory experience
+                                </p>
                             </div>
                         </label>
 
@@ -248,7 +258,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio4">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Filter</h3>
-                                <p class="coffee_plan--card_desc">For drip or pour-over coffee methods such as V60 or Aeropress</p>
+                                <p class="coffee_plan--card_desc">For drip or pour-over coffee methods such as V60 or
+                                    Aeropress</p>
                             </div>
                         </label>
 
@@ -256,7 +267,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio4">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Cafetiére</h3>
-                                <p class="coffee_plan--card_desc">Course ground beans specially suited for french press coffee</p>
+                                <p class="coffee_plan--card_desc">Course ground beans specially suited for french press
+                                    coffee</p>
                             </div>
                         </label>
                     </div>
@@ -278,7 +290,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio5">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Every week</h3>
-                                <p class="coffee_plan--card_desc">$7.20 per shipment. Includes free first-class shipping.</p>
+                                <p class="coffee_plan--card_desc">$7.20 per shipment. Includes free first-class
+                                    shipping.</p>
                             </div>
                         </label>
 
@@ -286,7 +299,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio5">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Every 2 weeks</h3>
-                                <p class="coffee_plan--card_desc">$9.60 per shipment. Includes free priority shipping.</p>
+                                <p class="coffee_plan--card_desc">$9.60 per shipment. Includes free priority shipping.
+                                </p>
                             </div>
                         </label>
 
@@ -294,7 +308,8 @@
                             <input class="coffee_plan--radio" type="radio" name="plan_radio5">
                             <div class="coffee_plan--card">
                                 <h3 class="coffee_plan--card_title">Every month</h3>
-                                <p class="coffee_plan--card_desc">$12.00 per shipment. Includes free priority shipping.</p>
+                                <p class="coffee_plan--card_desc">$12.00 per shipment. Includes free priority shipping.
+                                </p>
                             </div>
                         </label>
                     </div>
@@ -321,9 +336,6 @@
     </main>
 
     <section class="modal">
-
-            <div class="modal_wrapper">
-
         <div class="modal_wrapper">
             <div class="modal_content">
                 <div class="modal_title--wrapper">
@@ -331,25 +343,15 @@
                 </div>
                 <div class="modal_content--wrapper">
 
-                    <h3 class="modal_desc">“I drink my coffee as <span style="color: var(--primary-color)">Filter</span>, with a
-                        <span style="color: var(--primary-color)">Decaf</span> type of bean. <span
-                            style="color: var(--primary-color)">250g</span> ground ala <span
-                            style="color: var(--primary-color)">Cafetiére</span>,
-                        sent to me <span style="color: var(--primary-color)">Every Week</span>.”</h3>
-                    <p class="modal_confirmation">Is this correct? You can proceed to checkout or go back to plan selection if
-
                     <h3 class="modal_desc">“I drink my coffee as <span
-                            style="color: var(--primary-color)">Filter</span>,
-                        with a
+                            style="color: var(--primary-color)">Filter</span>, with a
                         <span style="color: var(--primary-color)">Decaf</span> type of bean. <span
                             style="color: var(--primary-color)">250g</span> ground ala <span
                             style="color: var(--primary-color)">Cafetiére</span>,
                         sent to me <span style="color: var(--primary-color)">Every Week</span>.”
                     </h3>
                     <p class="modal_confirmation">Is this correct? You can proceed to checkout or go back to plan
-                        selection
-                        if
-
+                        selection if
                         something is off. Subscription discount codes can also be redeemed at the checkout. </p>
                     <div class="modal_checkout">
                         <h3 class="modal_price">$14.00/ mo</h3>
@@ -357,9 +359,6 @@
                     </div>
                 </div>
             </div>
-
-        </section>
-
         </div>
     </section>
 
